package com.casino_gacha.webapp.models;

import com.casino_gacha.webapp.models.composite_keys.CasinoUserDisabledTagsPK;

import jakarta.persistence.EmbeddedId;
import jakarta.persistence.Entity;
import jakarta.persistence.Table;

import lombok.Data;
import lombok.EqualsAndHashCode;
import lombok.ToString;

@Entity
@Data
@EqualsAndHashCode(callSuper = true)
@ToString(callSuper = true)
@Table(name = "casino_user_disabled_tags")
public class CasinoUserDisabledTags extends Base {

  @EmbeddedId
  private CasinoUserDisabledTagsPK id;
}
